maze.lessons.maze.island.IslandMaze.scala.error
Escaper:8: error: value North is not a member of object plm.universe.Direction
        setDirection(Direction.North)
                               ^Escaper:40: warning: enclosing method murGauche has result type Unit: return value discarded
  return res
  ^